fix(limel-checkbox): align readonly icon and label

--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -23,6 +23,8 @@
 
 limel-dynamic-label {
     margin-top: 0.375rem;
+    margin-left: 0.375rem;
+    gap: 0.375rem;
 }
 
 @include checkbox.core-styles;
